connection to graph api in jar file, working on telephone_number.json

--- a/pom.xml
+++ b/pom.xml
@@ -48,12 +48,21 @@
         <resources>
             <resource>
                 <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.java</include>
+                </includes>
             </resource>
             <resource>
                 <directory>src/main/resources</directory>
+                <includes>
+                    <include>**/*</include>
+                </includes>
             </resource>
             <resource>
                 <directory>src/main/powershell</directory>
+                <includes>
+                    <include>**/*.ps1</include>
+                </includes>
             </resource>
         </resources>
         <plugins>
